<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/vastus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tehte_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/uus_arv"
        app:layout_constraintEnd_toStartOf="@+id/uus_arv"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uus_arv"
        tools:text="tehe" />

    <EditText
        android:id="@+id/uus_arv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vastus" />

    <Button
        android:id="@+id/nupp_nr0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr0"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_koma"
        app:layout_constraintEnd_toStartOf="@+id/nupp_koma" />

    <Button
        android:id="@+id/nupp_nr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr1"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr2"
        app:layout_constraintEnd_toStartOf="@+id/nupp_nr2" />

    <Button
        android:id="@+id/nupp_nr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr2"
        app:layout_constraintEnd_toEndOf="@+id/nupp_nr5"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr5" />

    <Button
        android:id="@+id/nupp_nr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr3"
        app:layout_constraintStart_toStartOf="@+id/nupp_nr6"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr6" />

    <Button
        android:id="@+id/nupp_nr4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr4"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr5"
        app:layout_constraintEnd_toStartOf="@+id/nupp_nr5" />

    <Button
        android:id="@+id/nupp_nr5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr5"
        app:layout_constraintEnd_toEndOf="@+id/nupp_nr8"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr8" />

    <Button
        android:id="@+id/nupp_nr6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr6"
        app:layout_constraintStart_toStartOf="@+id/nupp_nr9"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr9" />

    <Button
        android:id="@+id/nupp_nr7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr7"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr8"
        app:layout_constraintEnd_toStartOf="@+id/nupp_nr8" />

    <Button
        android:id="@+id/nupp_nr8"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr8"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr9"
        app:layout_constraintEnd_toStartOf="@+id/nupp_nr9" />

    <Button
        android:id="@+id/nupp_nr9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nr9"
        app:layout_constraintStart_toStartOf="@+id/vertikaal_telg"
        app:layout_constraintTop_toBottomOf="@+id/uus_arv" />

    <Button
        android:id="@+id/nupp_jaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/jaga"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr3"
        app:layout_constraintStart_toEndOf="@+id/nupp_nr3" />

    <Button
        android:id="@+id/nupp_korruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/korruta"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_lahuta"
        app:layout_constraintStart_toEndOf="@+id/nupp_lahuta" />

    <Button
        android:id="@+id/nupp_lahuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/lahuta"
        app:layout_constraintStart_toStartOf="@+id/nupp_nr3"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr3" />

    <Button
        android:id="@+id/nupp_liida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="136dp"
        android:minHeight="64dp"
        android:text="@string/liida"
        app:layout_constraintStart_toStartOf="@+id/nupp_lahuta"
        app:layout_constraintTop_toBottomOf="@+id/nupp_lahuta" />

    <Button
        android:id="@+id/nupp_koma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/koma"
        app:layout_constraintEnd_toEndOf="@+id/nupp_nr2"
        app:layout_constraintTop_toBottomOf="@+id/nupp_nr2" />

    <Button
        android:id="@+id/nupp_vordub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="136dp"
        android:minHeight="64dp"
        android:text="@string/vordub"
        app:layout_constraintEnd_toEndOf="@+id/nupp_koma"
        app:layout_constraintTop_toBottomOf="@+id/nupp_koma" />

    <Button
        android:id="@+id/nupp_negatiivne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/negatiivne"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr6"
        app:layout_constraintStart_toEndOf="@+id/nupp_nr6" />

    <Button
        android:id="@+id/nupp_nulli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:text="@string/nulli"
        app:layout_constraintBaseline_toBaselineOf="@+id/nupp_nr9"
        app:layout_constraintStart_toEndOf="@+id/nupp_nr9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertikaal_telg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>